Add a core protobuf health endpoint
