# config/routes.php
@@ -2,9 +2,8 @@
 
 declare(strict_types=1);
 
-use App\Examples\Auth\Transport\Http\AuthHandler;
-use App\Examples\Home\Transport\Http\HomeHandler;
 use App\Platform\Http\Handler\HandlerInterface;
+use App\Platform\Http\Handler\HealthCheckHandler;
 
 /**
  * WARNING: This file is automatically generated
@@ -17,28 +16,10 @@ use App\Platform\Http\Handler\HandlerInterface;
  * }>
  */
 return [
-    // AuthService.Login
-    [
-        'method' => 'POST',
-        'path' => '/api/v1/auth/login',
-        'handler' => AuthHandler::class,
-    ],
-    // AuthService.Logout
-    [
-        'method' => 'POST',
-        'path' => '/api/v1/auth/logout',
-        'handler' => AuthHandler::class,
-    ],
-    // AuthService.RefreshToken
-    [
-        'method' => 'POST',
-        'path' => '/api/v1/auth/refresh',
-        'handler' => AuthHandler::class,
-    ],
-    // HomeService.Home
+    // HealthService.Check
     [
         'method' => 'GET',
-        'path' => '/api/v1/home',
-        'handler' => HomeHandler::class,
+        'path' => '/api/v1/health',
+        'handler' => HealthCheckHandler::class,
     ],
 ];
